# Pythonproject1

./: .coverage  .flake8  .gitignore  README.md  pyproject.toml
src/: Function_date.py  generators.py  masks.py  processing.py  widget.py
tests/: test_generators.py  test_masks.py  test_processing.py  test_widget.py
